Get flags loading and organize some stuff